# fast-api-graphql

./: README.md  main.py  pyproject.toml
